Adding Project1 stuff

--- a/code/rabbits2mine.ipynb
+++ b/code/rabbits2mine.ipynb
@@ -422,7 +422,9 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def run_simulation(system):\n",
