mainly chap06mine stuff

--- a/code/chap07mine.ipynb
+++ b/code/chap07mine.ipynb
@@ -1445,7 +1445,9 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def mix2(s1, s2):\n",
